# symbolics

./: Cargo.toml
src/: components.rs  error.rs  func.rs  interface.rs  main.rs  node.rs  sequence.rs  theory.rs  types.rs  widgets.rs
sym_theory/: Cargo.toml
sym_theory/src/: func.rs  id.rs  lib.rs  types.rs
