[package]
name = "symbolics"
version = "0.1.0"
authors = ["Brian Merchant <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "cb16eb7", features = ["im"] }
